samples/_failures_safe/1761246073_a64aec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27277f11.c: In function ‘main’:
./samples/SAFE/__tmp_27277f11.c:135:39: error: expected ‘)’ at end of input
  135 |     if (scanf("%u", &mesh.vertex_count
      |              ~                        ^
      |                                       )
./samples/SAFE/__tmp_27277f11.c:135:5: error: expected declaration or statement at end of input
  135 |     if (scanf("%u", &mesh.vertex_count
      |     ^~
